--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,7 +29,16 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="time-block">
+        <div class="row hour"><p class="col-1">10 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">11 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">12 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">1 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">2 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">3 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">4 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">5 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
