--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
     </header>
     <div class="container">
       <div class="time-block">
-        <div class="row hour"><p class="col-1">10 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">11 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">12 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">1 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">2 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">3 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">4 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
-        <div class="row hour"><p class="col-1">5 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"></button></div>
+        <div class="row hour"><p class="col-1">9 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">10 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">11 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">12 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">1 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">2 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">3 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">4 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">5 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
       </div>
     </div>
 
