--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     </header>
     <div class="container">
       <div class="time-block">
-        <div class="row hour"><p class="col-1">9 a.m.</p><textarea class="col-10" id="nine"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">10 a.m.</p><textarea class="col-10" id="ten"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">11 a.m.</p><textarea class="col-10" id="eleven"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">12 p.m.</p><textarea class="col-10" id="tweleve"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">1 p.m.</p><textarea class="col-10" id="one"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">2 p.m.</p><textarea class="col-10" id="two"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">3 p.m.</p><textarea class="col-10" id="three"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">4 p.m.</p><textarea class="col-10" id="four"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">5 p.m.</p><textarea class="col-10" id="five"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">9 a.m.</p><textarea class="col-10" id="9"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">10 a.m.</p><textarea class="col-10" id="10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">11 a.m.</p><textarea class="col-10" id="11"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">12 p.m.</p><textarea class="col-10" id="12"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">1 p.m.</p><textarea class="col-10" id="13"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">2 p.m.</p><textarea class="col-10" id="14"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">3 p.m.</p><textarea class="col-10" id="15"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">4 p.m.</p><textarea class="col-10" id="16"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour"><p class="col-1">5 p.m.</p><textarea class="col-10" id="17"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
       </div>
     </div>
 
