--- a/index.html
+++ b/index.html
@@ -4,46 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- bootstrap link -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <!-- fontawesome link -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <!-- googlefont link -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <!-- stylesheet link -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
-
+  <!-- Body -->
   <body>
+    <!-- Header -->
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <!-- Main -->
     <div class="container">
+      <!-- Timeblocks -->
       <div class="time-block">
-        <div class="row hour"><p class="col-1">9 a.m.</p><textarea class="col-10" id="9"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">10 a.m.</p><textarea class="col-10" id="10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">11 a.m.</p><textarea class="col-10" id="11"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">12 p.m.</p><textarea class="col-10" id="12"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">1 p.m.</p><textarea class="col-10" id="13"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">2 p.m.</p><textarea class="col-10" id="14"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">3 p.m.</p><textarea class="col-10" id="15"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">4 p.m.</p><textarea class="col-10" id="16"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
-        <div class="row hour"><p class="col-1">5 p.m.</p><textarea class="col-10" id="17"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="9"><p class="col-1">9 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="10"><p class="col-1">10 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="11"><p class="col-1">11 a.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="12"><p class="col-1">12 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="13"><p class="col-1">1 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="14"><p class="col-1">2 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="15"><p class="col-1">3 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="16"><p class="col-1">4 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
+        <div class="row hour" id="17"><p class="col-1">5 p.m.</p><textarea class="col-10"></textarea><button class="saveBtn col-1"><i class="fas fa-save fa-lg"></i></button></div>
       </div>
     </div>
-
+    <!-- jquery link -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- moment.js link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- JS link -->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
